# livekit-practice

./: .example.env  .gitignore  README.md  call_tool.py  end_of_turn.py  pyproject.toml  question_loop.py  speech_to_text.py  store_transcript.py  text_to_speech.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  evaluation_layer_1.baml  evaluation_layer_2.baml  evaluation_layer_3.baml  main.baml  tests.baml
practice_modules/: __init__.py  baml_llm_node.py  global_state.py  job_context.py
practice_modules/state_machine_approach/: __init__.py  assessment_state_machine.py  question_state_machine.py  state_question_loop.py  sub_question_state_machine.py  types.py
practice_modules/state_machine_approach.py/: assessment_state_machine.py  logger_utils.py  question_state_machine.py  state_question_loop.py  sub_question_state_machine.py  types.py
