[project]
name = "audio-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "baml-py>=0.222.0",
    "livekit>=1.1.2",
    "livekit-agents[cartesia,openai,sarvam,silero,turn-detector]>=1.5.2",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "python-dotenv>=1.0.0",
]
